@@ -3,8 +3,9 @@ v0.3.1 (unreleased):
 - Added a `--prune` flag to delete remote-tracking branches that no longer
   exist on their remote after fetching.
 - Added a '--bookmark-file' option to support multiple bookmark config files.
+- Cleaned up the bookmark file format, fixing a related Windows bug. The script
+  will automatically migrate to the new one.
 - Fixed a bug related to Python 3 compatibility.
-- Fixed a bug related to absolute paths in bookmarks on Windows.
 
 v0.3 (released June 7, 2015):
 
